@@ -43,6 +43,7 @@ export("+.section",
        ctimeToSeconds,
        decimate,
        decodeHeaderNortek,
+       decodeTime,
        despike,
        detrend,
        distance,
